<resources>
    <string name="app_name">GitHub User App</string>
    <string name="user_name">Name</string>
    <string name="username">Username</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="_0">0</string>
    <string name="change_language">Change Language</string>
    <string name="search_hint">Type name</string>
    <string name="search" >Search</string>
    <string name="favorite" >Favorites</string>

    <string name="settings">Settings</string>

    <string name="key_alarm" translatable="false">alarm</string>
    <string name="daily_reminder" >Reminder at 9:00 AM</string>
    <string name="key_language" translatable="false">language</string>
    <string name="repeat_message" >It\'s time to find your favorite GitHub user on Our Apps</string>
    <string name="stop_reminder">Daily reminder stopped</string>
    <string name="active_reminder">Daily reminder actived</string>
    <string name="success_added">Success added to favorites</string>
    <string name="failed_added">Failed added to favorite</string>
    <string name="no_data">No data</string>
    <string name="delete">User deleted from Favorite</string>
    <string name="not_found">User not found</string>
</resources>